Redux: sbx added more strip indel tests